Commiting the DD Webgoat configuraiton howto